--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- TODO: localize -->
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <!-- #TODO PUBLIC_URL? -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1d3557" />
-    <!-- #TODO: load theme color from somewhere -->
     <meta
       name="description"
-      content="Race Replay application for F1 22's telemetry."
+      content="White Whale Social Network"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Race Replay</title>
+    <title>White Whale FE Development</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <!-- TODO: localize -->
     <div id="root"></div>
   </body>
 </html>
